🐛[fix]: 이미지 테마에서 드롭다운 배경색 변경, 메인 overflow 변경

--- a/src/components/common/ShareDropdown/index.module.css
+++ b/src/components/common/ShareDropdown/index.module.css
@@ -3,7 +3,7 @@
   top: calc(100% + 8px);
   width: 138px;
   border-radius: 24px;
-  background: var(--white-opacity-70);
+  background: var(--white-opacity-30);
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
   overflow: hidden;
   z-index: 20;
